# prompting-workshop

./: .gitignore  README.md  prompt-patterns.md  pyproject.toml
notebooks/: bonus.ipynb  bonus_unit1.ipynb  workshop.ipynb
